--- a/nb_clustering_hierarchy_netflix.ipynb
+++ b/nb_clustering_hierarchy_netflix.ipynb
@@ -31,10 +31,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4d90b4bf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1682 entries, 0 to 1681\n",
+      "Data columns (total 24 columns):\n",
+      " #   Column            Non-Null Count  Dtype  \n",
+      "---  ------            --------------  -----  \n",
+      " 0   ID                1682 non-null   int64  \n",
+      " 1   Title             1682 non-null   object \n",
+      " 2   ReleaseDate       1681 non-null   object \n",
+      " 3   VideoReleaseDate  0 non-null      float64\n",
+      " 4   IMDB              1679 non-null   object \n",
+      " 5   Unknown           1682 non-null   int64  \n",
+      " 6   Action            1682 non-null   int64  \n",
+      " 7   Adventure         1682 non-null   int64  \n",
+      " 8   Animation         1682 non-null   int64  \n",
+      " 9   Childrens         1682 non-null   int64  \n",
+      " 10  Comedy            1682 non-null   int64  \n",
+      " 11  Crime             1682 non-null   int64  \n",
+      " 12  Documentary       1682 non-null   int64  \n",
+      " 13  Drama             1682 non-null   int64  \n",
+      " 14  Fantasy           1682 non-null   int64  \n",
+      " 15  FilmNoir          1682 non-null   int64  \n",
+      " 16  Horror            1682 non-null   int64  \n",
+      " 17  Musical           1682 non-null   int64  \n",
+      " 18  Mystery           1682 non-null   int64  \n",
+      " 19  Romance           1682 non-null   int64  \n",
+      " 20  SciFi             1682 non-null   int64  \n",
+      " 21  Thriller          1682 non-null   int64  \n",
+      " 22  War               1682 non-null   int64  \n",
+      " 23  Western           1682 non-null   int64  \n",
+      "dtypes: float64(1), int64(20), object(3)\n",
+      "memory usage: 315.5+ KB\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -68,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "73aac4ec",
    "metadata": {},
    "outputs": [
@@ -175,7 +214,7 @@
     "\n",
     "Ejemplo con películas\n",
     "\n",
-    "Imaginá que tenés dos películas con puntajes (0 o 1) en géneros:\n",
+    "Imaginá que tienes dos películas con puntajes (0 o 1) en géneros:\n",
     "\n",
     "| Película       | Acción | Comedia | Drama |\n",
     "|----------------|--------|---------|-------|\n",
@@ -203,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f0a6efd7",
    "metadata": {},
    "outputs": [
@@ -255,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "92019145",
    "metadata": {},
    "outputs": [
@@ -319,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "9e1df4e4",
    "metadata": {},
    "outputs": [
@@ -346,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "736017ad",
    "metadata": {},
    "outputs": [
