--- a/nb_clustering_hierarchy_netflix.ipynb
+++ b/nb_clustering_hierarchy_netflix.ipynb
@@ -214,7 +214,7 @@
     "\n",
     "Ejemplo con películas\n",
     "\n",
-    "Imaginá que tienes dos películas con puntajes (0 o 1) en géneros:\n",
+    "Imagina que tienes dos películas con puntajes (0 o 1) en géneros:\n",
     "\n",
     "| Película       | Acción | Comedia | Drama |\n",
     "|----------------|--------|---------|-------|\n",
